_ltu-components/src/banner/scss/_banner.scss
// depenencies
@use "config";
@use "text/scss/text";

//----------------------------------------------------------------------------------------------------------------------------------//
// Banner Hero
//----------------------------------------------------------------------------------------------------------------------------------//

.ds-hero {
    max-width: 1600px;
    margin: 0 auto;
}
.ds-hero__content {
    position: relative;

    @media(min-width: 768px) {
        padding: config.spunits(10) 0;

        // red triangle top left
        &::before {
            content: "";
            display: block;
            width: 0;
            height: 0;
            border-left: 196px solid transparent;
            border-right: 196px solid transparent;
            border-top: 148px solid #e2231b;
            position: absolute;
            z-index: 1;
            top: 0;
            left: -196px;
        }
    }
}
.ds-hero__text {
    max-width: 800px;
    min-height: 400px;
    padding: config.spunits(8) 20px config.spunits(8) 20px;
    background-color: white;
    position: relative;
    z-index: 1;
    
    // button group always at bottom
    display: flex;
    flex-direction: column;
    .ds-hero__button-group {
        padding-top: 1rem;
        margin-top: auto;
    }

    > :first-child { margin-top: 0; }

    h1 {
        margin-bottom: 0;
    }
    h2 {
        margin-top: 1rem;
        font-size: config.$h3;
    }
    h3, h4, h5, h6 {
        margin-top: 1rem;
        font-size: config.$h4;
    }

    // latrobe chevron
    &::before {
        content: "";
        display: block;
        width: 40px;
        height: 40px;
        background-image: url("icons/latrobe-chevron-RGB.svg");
        background-repeat: no-repeat;
        background-size: 100%;
    }

    @media(min-width: 640px) {
        padding: config.spunits(8) 40px config.spunits(8) 40px;
    }

    @media(min-width: 768px) {
        width: 2 / 3 * 100%;
        padding: config.spunits(8) config.spunits(7) config.spunits(8) config.spunits(10);
    }
}

.ds-hero__image {
    position: relative;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;
    padding-bottom: 56.25%; /* 16:9 */

    img {
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        right: 0;
        bottom: 0;
    }

    // white triangle bottom left
    &::before {
        content: "";
        display: block;
        width: 0; 
        height: 0; 
        border-right: config.spunits(6) solid transparent;
        border-bottom: config.spunits(4) solid #fff;
        position: absolute;
        z-index: 1;
        bottom: 0;
        left: 0;
    }

    // white triangle bottom right
    &::after {
        content: "";
        display: block;
        width: 0; 
        height: 0; 
        border-left: config.spunits(35) solid transparent;
        border-right: 0px solid transparent;
        border-bottom: config.spunits(13) solid #fff;
        position: absolute;
        bottom: 0;
        right: 0;
    }

    @media(min-width: 768px) {
        position: absolute;
        padding-bottom: 0;
        
        // white triangle bottom left
        &::before {
            border-right: config.spunits(13) solid transparent;
            border-bottom: config.spunits(10) solid #fff;
        }

        // white triangle bottom right
        &::after {
            border-left: config.spunits(70) solid transparent;
            border-right: 0px solid transparent;
            border-bottom: config.spunits(30) solid #fff;
        }
    }
}


/* old for deleteions

.ds-banner-hero {
    width: 100%;
    overflow: hidden;
    position: relative;
}

.ds-banner-hero__image {
    width: 100%;
    height: 800px;
    display: flex;
    align-items: center;
    background-position: center;
    margin: 0;
}

.ds-banner-hero__text {
    padding-left: 6%;

    @media (min-width:768px) {
        padding-left: 12%;
        width: 60%;
        color: white;
        z-index: 1000;
    }
}

.ds-banner-hero__overlay {
    @media (min-width:768px) {
        width: 50%;
        height: 100%;
        background-image: linear-gradient(to right, rgba(0,0,0,0.75), rgba(0,0,0,0));
        position: absolute;
        left: 0;
        top: 0;
        z-index: 100;
    }
}

//----------------------------------------------------------------------------------------------------------------------------------//
// Banner Campaigns
//----------------------------------------------------------------------------------------------------------------------------------//

.ds-banner-campaign {
    width: 100%;
    padding: 0;
    position: relative;
    display: block;

    @media (min-width:1024px) {
        display: flex;
        align-items: center;
        padding-left: 12%;
        padding-right: 0;
        overflow: hidden;

        &--left {
            padding-left: 0;
            padding-right: 12%;
            flex-direction: row-reverse;
    
            .banner-campaign__image {
                left: 0;
                right: initial;
    
                &:after {
                    right: 0;
                    left: initial;
                    transform: skew(15deg, 0deg);
                }
            }

            .banner-campaign__text {
                padding-left: config.$space-unit * 40;
                padding-right: 0;
            }
        }
    }
}

.ds-banner-campaign__text {
    @media (max-width:1024px) {
        padding-left: 6%;
        padding-right: 6%;
        margin-bottom: 4%;
    }

    @media (min-width:1024px) {
        width: 50%;
        z-index: 2;
        padding-top: config.$space-unit * 30;
        padding-bottom: config.$space-unit * 30;
    }

    @media (min-width:1200px) {
        padding-right: config.$space-unit * 40;
    }

    h1 {
        @extend .h1-fluid;
    }

    > :first-child {
        margin: 0;;
    }
}

.ds-banner-campaign__image {
    background-size: cover;
    background-position: center;
    width: 100%;
    position: relative;
    z-index: 1;

    @media (max-width:1024px) {
        height: 33.33vh;
    }

    @media (min-width:1024px) {
        margin-bottom: inherit;
        width: 50%;
        position: absolute;
        right: 0;
        top: 0;
        bottom: 0;

        &:after {
            display: block;
            position: absolute;
            bottom: 0;
            left: 0;
            width: 0;
            height: 0;
            border-style: solid;
            border-width: 1600px 800px 0 0;
            border-color: white transparent transparent;
            content: "";
        }
    }
}

//----------------------------------------------------------------------------------------------------------------------------------//
// Banner Box
//----------------------------------------------------------------------------------------------------------------------------------//

.ds-banner-box {
    position: relative;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: top center;
    padding-top: 56.25%;
}

.ds-banner-box__text {
    text-align: left;
    padding: 24px;
    background: config.$color-3a;
}

.ds-banner-box__label {
    display: inline-block;
    color: config.$color-3c;
    border-bottom: 2px solid config.$color-3c;
    padding: 0 0 4px 0;
    font-size: 20px;
    line-height: 24px;
    text-transform: uppercase;
}

.ds-banner-box__ctas {
    display: block;
    margin-bottom: 0;
}

.ds-banner-box-ctas .tablet-up {
    display: none;
}
@media (min-width:768px) {
    .ds-banner-box {
        background-size: cover;
        background-position: center;
        padding-top: 0;
        position: relative;
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .ds-banner-box__text {
        box-sizing: border-box;
        color: white;
        left: 50%;
        z-index: 1;
        background: rgba(black,0.6);
        width: 80%;
        max-width: 820px;
    }

    .ds-banner-box__text li {
        margin: 0;
    }

    .ds-banner-box__label {
        color: white;
        border-bottom: 2px solid white;
    }

    .ds-banner-box__ctas .mobile {
        display: none;
    }

    .ds-banner-box__ctas .tablet-up {
        display: inline-block;
    }
}
/* end */

